"under construction" in title.

--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
 
 <div id="text">
 
-== Notes on modelling a metronome ==
+<h2> Notes on modelling a metronome (under construction) </h2>
 
 
 <div class="left_col">
