Powered by Puzlet.

--- a/main.html
+++ b/main.html
@@ -84,6 +84,13 @@ $$
     </div>
 </div>
 
+  <div class="clear"></div>
+  
+  <hr>
+  
+  Powered by <a href="http://puzlet.org/">Puzlet</a>.
+
+
 </div>
 
 
